@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2015-2023 The OpenZipkin Authors
+    Copyright 2015-2024 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -19,7 +19,7 @@
 
   <groupId>io.zipkin</groupId>
   <artifactId>zipkin-parent</artifactId>
-  <version>2.25.3-SNAPSHOT</version>
+  <version>3.0.5-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -39,13 +39,19 @@
     <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <!-- default bytecode version for src/main -->
-    <main.java.version>1.8</main.java.version>
-    <main.signature.artifact>java18</main.signature.artifact>
+    <!-- With two exceptions, main code is Java 11
+         * zipkin core Jar is Java 1.8
+         * zipkin-server is 17, as that's the floor of Spring Boot 3. -->
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.testSource>17</maven.compiler.testSource>
+    <maven.compiler.testTarget>17</maven.compiler.testTarget>
+    <maven.compiler.testRelease>17</maven.compiler.testRelease>
 
     <!-- override to set exclusions per-project -->
     <errorprone.args />
-    <errorprone.version>2.23.0</errorprone.version>
+    <errorprone.version>2.24.1</errorprone.version>
 
     <zipkin-proto3.version>1.0.0</zipkin-proto3.version>
 
@@ -56,24 +62,24 @@
     <netty.version>4.1.100.Final</netty.version>
 
     <!-- It's easy for Jackson dependencies to get misaligned, so we manage it ourselves. -->
-    <jackson.version>2.16.0</jackson.version>
+    <jackson.version>2.16.1</jackson.version>
 
     <java-driver.version>4.18.0</java-driver.version>
-    <micrometer.version>1.12.0</micrometer.version>
+    <micrometer.version>1.12.1</micrometer.version>
 
     <!-- Used for Generated annotations -->
     <javax-annotation-api.version>1.3.1</javax-annotation-api.version>
 
     <!-- update together -->
-    <spring-boot.version>2.7.18</spring-boot.version>
-    <spring.version>5.3.31</spring.version>
+    <spring-boot.version>3.2.1</spring-boot.version>
+    <spring.version>6.1.2</spring.version>
 
     <!-- MySQL connector is GPL, even if it has an OSS exception.
          https://www.mysql.com/about/legal/licensing/foss-exception/
 
          MariaDB has a friendlier license, LGPL, which is less scary in audits.
     -->
-    <mariadb-java-client.version>3.3.1</mariadb-java-client.version>
+    <mariadb-java-client.version>3.3.2</mariadb-java-client.version>
     <HikariCP.version>5.1.0</HikariCP.version>
     <slf4j.version>1.7.36</slf4j.version>
     <auto-value.version>1.10.4</auto-value.version>
@@ -82,7 +88,7 @@
     <!-- Test only dependencies -->
     <junit-jupiter.version>5.10.1</junit-jupiter.version>
     <mockito.version>5.8.0</mockito.version>
-    <assertj.version>3.24.2</assertj.version>
+    <assertj.version>3.25.1</assertj.version>
     <awaitility.version>4.2.0</awaitility.version>
     <testcontainers.version>1.19.3</testcontainers.version>
     <okhttp.version>4.12.0</okhttp.version>
@@ -94,12 +100,11 @@
 
     <license.skip>${skipTests}</license.skip>
 
-    <animal-sniffer-maven-plugin.version>1.23</animal-sniffer-maven-plugin.version>
     <go-offline-maven-plugin.version>1.2.8</go-offline-maven-plugin.version>
     <!-- TODO: cleanup any redundant ignores now also in the 4.0 release (once final) -->
     <license-maven-plugin.version>4.3</license-maven-plugin.version>
     <maven-bundle-plugin.version>5.1.9</maven-bundle-plugin.version>
-    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
     <!-- Use same version as https://github.com/openzipkin/docker-java -->
     <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
@@ -107,12 +112,12 @@
     <!-- Use same version as https://github.com/openzipkin/docker-java -->
     <maven-help-plugin.version>3.4.0</maven-help-plugin.version>
     <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
-    <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
     <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
     <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
     <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
     <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
     <wire-maven-plugin.version>1.3</wire-maven-plugin.version>
   </properties>
@@ -198,14 +203,6 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${assertj.version}</version>
-      <exclusions>
-        <!-- Use newer bytebuddy from mockito.
-             TODO: remove when assertj releases a new version -->
-        <exclusion>
-          <groupId>net.bytebuddy</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
       <scope>test</scope>
     </dependency>
 
@@ -228,13 +225,6 @@
           <configuration>
             <!-- Add dependencies indirectly referenced by build plugins -->
             <dynamicDependencies>
-              <DynamicDependency>
-                <groupId>org.codehaus.mojo.signature</groupId>
-                <artifactId>${main.signature.artifact}</artifactId>
-                <version>1.0</version>
-                <type>signature</type>
-                <repositoryType>MAIN</repositoryType>
-              </DynamicDependency>
               <DynamicDependency>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin-git</artifactId>
@@ -262,10 +252,7 @@
           <version>${maven-compiler-plugin.version}</version>
           <inherited>true</inherited>
           <configuration>
-            <source>${main.java.version}</source>
-            <target>${main.java.version}</target>
             <fork>true</fork>
-            <release>8</release>
             <showWarnings>true</showWarnings>
           </configuration>
         </plugin>
@@ -404,44 +391,16 @@
         <version>${maven-help-plugin.version}</version>
       </plugin>
 
-      <!-- Top-level to ensure our server can use JRE 8
-             (by checking we don't accidentally use later apis) -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>${animal-sniffer-maven-plugin.version}</version>
-        <configuration>
-          <signature>
-            <groupId>org.codehaus.mojo.signature</groupId>
-            <artifactId>${main.signature.artifact}</artifactId>
-            <version>1.0</version>
-          </signature>
-          <checkTestClasses>false</checkTestClasses>
-        </configuration>
-        <executions>
-          <execution>
-            <id>animal-sniffer</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <!-- Ensures root cause ends up in the console -->
           <trimStackTrace>false</trimStackTrace>
-          <!-- TODO: remove when assertj releases a new version, and includes updated bytebuddy.
-               https://github.com/mockito/mockito/issues/3119#issuecomment-1732179039 -->
-          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
         <dependencies>
           <!-- needed for surefire.
-     https://maven.apache.org/surefire/maven-surefire-plugin/examples/junit-platform.html -->
+            https://maven.apache.org/surefire/maven-surefire-plugin/examples/junit-platform.html -->
           <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -479,9 +438,6 @@
           <useModulePath>false</useModulePath>
           <!-- Ensures root cause ends up in the console -->
           <trimStackTrace>false</trimStackTrace>
-          <!-- TODO: remove when assertj releases a new version, and includes updated bytebuddy.
-                https://github.com/mockito/mockito/issues/3119#issuecomment-1732179039 -->
-          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
 
@@ -499,7 +455,7 @@
                 <requireJavaVersion>
                   <!-- Change this to control LTS JDK versions allowed to build
                        the project. Keep in sync with .github/workflows -->
-                  <version>[11,12),[17,18),[21,22)</version>
+                  <version>[17,18),[21,22)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -525,6 +481,9 @@
             <bnd>SCRIPT_STYLE</bnd>
             <ejs>XML_STYLE</ejs>
             <css>SLASHSTAR_STYLE</css>
+            <!-- build-bin non-trivial scripts -->
+            <javadoc_to_gh_pages>SCRIPT_STYLE</javadoc_to_gh_pages>
+            <maybe_install_npm>SCRIPT_STYLE</maybe_install_npm>
             <!-- build-bin/docker -->
             <docker_block_on_health>SCRIPT_STYLE</docker_block_on_health>
             <configure_docker>SCRIPT_STYLE</configure_docker>
@@ -548,6 +507,8 @@
             <maven_release>SCRIPT_STYLE</maven_release>
             <maven_unjar>SCRIPT_STYLE</maven_unjar>
             <!-- docker/**/start-* -->
+            <start-activemq>SCRIPT_STYLE</start-activemq>
+            <start-eureka>SCRIPT_STYLE</start-eureka>
             <start-cassandra>SCRIPT_STYLE</start-cassandra>
             <start-elasticsearch>SCRIPT_STYLE</start-elasticsearch>
             <start-kafka-zookeeper>SCRIPT_STYLE</start-kafka-zookeeper>
@@ -598,8 +559,13 @@
             <exclude>src/test/resources/**</exclude>
             <exclude>**/generated/**</exclude>
             <exclude>.dockerignore</exclude>
-            <exclude>build-bin/*</exclude>
-            <exclude>charts/**</exclude>
+            <!-- trivial build-bin scripts -->
+            <exclude>build-bin/configure_deploy</exclude>
+            <exclude>build-bin/configure_test</exclude>
+            <exclude>build-bin/deploy</exclude>
+            <exclude>build-bin/test</exclude>
+            <!-- temporarily patched file from line/armeria#5391 -->
+            <exclude>**/HttpFile.java</exclude>
           </excludes>
           <strictCheck>true</strictCheck>
         </configuration>
@@ -649,10 +615,10 @@
     </profile>
 
     <profile>
-      <id>error-prone-11+</id>
+      <id>error-prone-17+</id>
       <activation>
         <!-- Only LTS versions -->
-        <jdk>[11,12),[17,18),[21,22)</jdk>
+        <jdk>[17,18),[21,22)</jdk>
       </activation>
       <build>
         <plugins>
@@ -661,8 +627,6 @@
             <version>${maven-compiler-plugin.version}</version>
             <inherited>true</inherited>
             <configuration>
-              <source>${main.java.version}</source>
-              <target>${main.java.version}</target>
               <fork>true</fork>
               <showWarnings>true</showWarnings>
             </configuration>
@@ -781,7 +745,7 @@
               <!-- hush pedantic warnings: we don't put param and return on everything! -->
               <doclint>none</doclint>
               <!-- While we publish modules, our source is pre-Java9 so tell javadoc that. -->
-              <source>8</source>
+              <source>${maven.compiler.release}</source>
             </configuration>
             <executions>
               <execution>
